netby-inventory/templates/deployment-mstrans.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-transactions
  namespace: netby-inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-transactions
  template:
    metadata:
      labels:
        app: ms-transactions
    spec:
      containers:
      - name: ms-transactions
        image: mstransactions:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: ms-transactions-service
  namespace: netby-inventory
spec:
  selector:
    app: ms-transactions
  ports:
  - name: http
    protocol: TCP
    port: 80 # Puerto dentro del cluster
    targetPort: 8080 # Puerto del contenedor (NetCore)
  type: ClusterIP # Exponer el servicio al exterior
