netby-inventory/templates/deployment-sqlexpress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql
  namespace: netby-inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1433
        volumeMounts:
          - name: mssql-storage
            mountPath: /var/opt/mssql
      volumes:
        - name: mssql-storage
          persistentVolumeClaim:
            claimName: mssql-data
---
apiVersion: v1
kind: Service
metadata:
  name: mssql
  namespace: netby-inventory
spec:
  selector:
    app: mssql
  ports:
  - port: 1433
    targetPort: 1433
