netby-inventory/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netby-ingress
  namespace: netby-inventory
  annotations:
    
spec:
  ingressClassName: kong
  tls:
  - hosts:
    - netby.drkapps.com
  rules:
  - host: netby.drkapps.com
    http:
      paths:
      - path: "/api/products"
        pathType: ImplementationSpecific
        backend:
          service:
            name: ms-products-service
            port:
              number: 80
      - path: "/api/transaction"
        pathType: ImplementationSpecific
        backend:
          service:
            name: ms-transactions-service
            port:
              number: 80
      - path: "/api/stock"
        pathType: ImplementationSpecific
        backend:
          service:
            name: ms-products-service
            port:
              number: 80
      - path: "/api/user"
        pathType: ImplementationSpecific
        backend:
          service:
            name: ms-auth-service
            port:
              number: 80
